--- a/contact.html
+++ b/contact.html
@@ -88,10 +88,10 @@
           </div>
         </div>
         <div class="form-group">
-            <label for="exampleFormControlTextarea1">Dejanos tu mensaje</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <label for="validationCustom05">Dejanos tu mensaje</label>
+            <textarea type="text" class="form-control" id="validationCustom03" required></textarea>
           </div>
-        <button class="btn btn-primary" type="submit">Submit form</button>
+        <button class="btn btn-dark" type="submit">Enviar Consulta</button>
       </form>
     </div>
       <script>
