--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-interval="4000">
-                        <img src="/assets/img/caricia.jpg" class="d-block w-100" alt="...">
+                        <img src="/assets/img/cariño.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="text-carousel">Unos mimos siempre estan bien.</p>
                         </div>
@@ -140,10 +140,7 @@
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
     </section>
-    <script src="/js/transitions.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
