--- a/pharmacy.html
+++ b/pharmacy.html
@@ -44,13 +44,21 @@
                 <a class="nav-link" href="#">Juguetes</a>
             </li>
     </header>
-    <h1 id="farmacia">Farmacia</h1>
-    
+    <div class="title-pharma">
+        <h2>Nuestro catalogo de medicamtentos</h2>
+    </div>
+    <div class="container-pharma row row-cols-1 row-cols-md-4" id="infoPharma">
+        
+    </div>
 
+
+    <section id="footer">
+        <footer>
+            <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
+        </footer>
+    </section>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/js/conection.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
