Alineación de parrafos y div's finalizado

--- a/contact.html
+++ b/contact.html
@@ -2,133 +2,136 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,600;1,300&display=swap"
-        rel="stylesheet">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,600;1,300&display=swap"
+    rel="stylesheet">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 
 <body>
-    <header>
-        <div class="header-page">
-            <div class="header-flex">
-                <div>
-                    <img class="logo-primary" src="/assets/icons/logo.svg" alt="logo">
-                </div>
-                <div class="ubication-flex">
-                    <div>
-                        <img class="logo-ubication" src="/assets/icons/location.svg" alt="">
-                    </div>
-                    <div>
-                        <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="pharmacy.html">Farmacia</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="toys.html">Juguetes</a>
-            </li>
-    </header>
-    <div class="container-form">   
+  <header>
+    <div class="header-page">
+      <div class="header-flex">
         <div>
-            <p>Dejanos tu mensaje y te contactaremos a la brevedad</p>
-        </div>     
-    <form class="needs-validation form-contacto" novalidate>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom01">Nombre</label>
-            <input type="text" class="form-control" id="validationCustom01" value="" required>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
+          <img class="logo-primary" src="/assets/icons/logo.svg" alt="logo">
+        </div>
+        <div class="ubication-flex">
+          <div>
+            <img class="logo-ubication" src="/assets/icons/location.svg" alt="">
           </div>
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom02">Apellido</label>
-            <input type="text" class="form-control" id="validationCustom02" value="" required>
-            <div class="valid-feedback">
-              Looks good!
-            </div>
+          <div>
+            <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
           </div>
         </div>
-        <div class="form-row">
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom03">Teléfono</label>
-            <input type="text" class="form-control" id="validationCustom03" required>
-            <div class="invalid-feedback">
-              Please provide a valid city.
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="validationCustom04">Mascota</label>
-            <select class="custom-select" id="validationCustom04" required>
-              <option selected disabled value="">Elija una opción</option>
-              <option>perro</option>
-              <option>gato</option>
-            </select>
-            <div class="invalid-feedback">
-              Please select a valid state.
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-            <label for="validationCustom05">Dejanos tu mensaje</label>
-            <textarea type="text" class="form-control" id="validationCustom03" required></textarea>
-          </div>
-        <button class="btn btn-dark" type="submit">Enviar Consulta</button>
-      </form>
+      </div>
     </div>
-      <script>
-      // Example starter JavaScript for disabling form submissions if there are invalid fields
-      (function() {
-        'use strict';
-        window.addEventListener('load', function() {
-          // Fetch all the forms we want to apply custom Bootstrap validation styles to
-          var forms = document.getElementsByClassName('needs-validation');
-          // Loop over them and prevent submission
-          var validation = Array.prototype.filter.call(forms, function(form) {
-            form.addEventListener('submit', function(event) {
-              if (form.checkValidity() === false) {
-                event.preventDefault();
-                event.stopPropagation();
-              }
-              form.classList.add('was-validated');
-            }, false);
-          });
-        }, false);
-      })();
-      </script>
-    <section id="footer">
-        <footer>
-            <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
-        </footer>
-    </section>
-    <script src="/js/transitions.js"></script>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contacto</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="pharmacy.html">Farmacia</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="toys.html">Juguetes</a>
+      </li>
+  </header>
+  <div class="container-form">
+    <div class="container-title">
+      <h2>Dejanos tu mensaje y te contactaremos a la brevedad</h2>
+    </div>
+    <form class="needs-validation form-contacto" novalidate>
+      <div class="form-row">
+        <div class="col-md-6 mb-3">
+          <label for="validationCustom01">Nombre</label>
+          <input type="text" class="form-control" id="validationCustom01" value="" required>
+          <div class="valid-feedback">
+            Muy bien!
+          </div>
+        </div>
+        <div class="col-md-6 mb-3">
+          <label for="validationCustom02">Apellido</label>
+          <input type="text" class="form-control" id="validationCustom02" value="" required>
+          <div class="valid-feedback">
+            Muy bien!
+          </div>
+        </div>
+      </div>
+      <div class="form-row">
+        <div class="col-md-6 mb-3">
+          <label for="validationCustom03">Teléfono</label>
+          <input type="text" class="form-control" id="validationCustom03" required>
+          <div class="invalid-feedback">
+            Por favor complete este campo con un numero de telefono.
+          </div>
+        </div>
+        <div class="col-md-6 mb-3">
+          <label for="validationCustom04">Mascota</label>
+          <select class="custom-select" id="validationCustom04" required>
+            <option selected disabled value="">Elija una opción</option>
+            <option>perro</option>
+            <option>gato</option>
+          </select>
+          <div class="invalid-feedback">
+            Seleccione una opción.
+          </div>
+        </div>
+      </div>
+      <div class="form-row">
+      <div class="col-md-12 mb-3">
+        <label for="validationCustom05">Dejanos tu mensaje</label>
+        <textarea type="text" class="form-control" id="validationCustom03" required></textarea>
+      </div>
+      </div>
+      <div class="button-enviar">  
+         <button class="btn btn-dark" type="submit">Enviar Consulta</button>
+      </div>
+    </form>
+  </div>
+  <footer>
+    <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
+</footer>
+
+  <script>
+    // Example starter JavaScript for disabling form submissions if there are invalid fields
+    (function () {
+      'use strict';
+      window.addEventListener('load', function () {
+        // Fetch all the forms we want to apply custom Bootstrap validation styles to
+        var forms = document.getElementsByClassName('needs-validation');
+        // Loop over them and prevent submission
+        var validation = Array.prototype.filter.call(forms, function (form) {
+          form.addEventListener('submit', function (event) {
+            if (form.checkValidity() === false) {
+              event.preventDefault();
+              event.stopPropagation();
+            }
+            form.classList.add('was-validated');
+          }, false);
+        });
+      }, false);
+    })();
+  </script>
+  <script src="/js/transitions.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
