--- a/index.html
+++ b/index.html
@@ -48,32 +48,34 @@
     </header>
     <div class="row">
         <div class="info-index col-sm-12 col-md-12 col-lg-12 col-xl-5">
-            <div>
-                <h1>BIENVENIDOS a FRANCO pet shop</h1>
-            </div>
-            <div>
-                <p class="text-inicio">
-                    En nuestro sitio encontrarás el mejor cuidado <br>
-                    para tu mascota, tenemos la experiencia de más <br>
-                    de 10 años cuidandolos y amandolos. <br>
-                    Tenemos nuestro catalogo de farmacia como <br>
-                    de jugueteria para que tu mascota esté
-                    saludable y feliz.</p>
-
-                <h2>
-                    ¿Quiénes somos?
-                </h2>
-                <p class="text-inicio">
-                    La iniciativa FRANCO pet shop empezó como un <br>
-                    proyecto para perros viendo un mercado mal <br>
-                    informado y con poco interés a estas bellas criaturas. <br>
-                    Actualmente nos vamos expandiendo a con nuestros <br>
-                    amigos mininos porque son nuestro día a día, <br>
-                    vivimos con 2 perros y 4 gatos adoptados, <br>
-                    sabemos lo que es tener un hijo peludo <br>
-                    y por eso compartimos con nuestros clientes <br>
-                    los mejores productos para su mascota.<br>
-                </p>
+            <div class="row somos-home">
+                <div class="container-fluid">
+                    <h1>BIENVENIDOS a FRANCO pet shop</h1>
+                    <p>
+                        En nuestro sitio encontrarás el mejor cuidado
+                        para tu mascota, tenemos la experiencia de más
+                        de 10 años cuidandolos y amandolos.
+                        Tenemos nuestro catalogo de farmacia como
+                        de jugueteria para que tu mascota esté
+                        saludable y feliz.
+                    </p>
+                </div>
+                <div class="container-fluid">
+                    <h2>
+                        ¿Quiénes somos?
+                    </h2>
+                    <p>
+                        La iniciativa FRANCO pet shop empezó como un
+                        proyecto para perros viendo un mercado mal
+                        informado y con poco interés a estas bellas criaturas.
+                        Actualmente nos vamos expandiendo a con nuestros
+                        amigos mininos porque son nuestro día a día,
+                        vivimos con 2 perros y 4 gatos adoptados,
+                        sabemos lo que es tener un hijo peludo
+                        y por eso compartimos con nuestros clientes
+                        los mejores productos para su mascota.
+                    </p>
+                </div>
             </div>
         </div>
         <div class="container-carousel col-sm-12 col-md-12 col-lg-12 col-xl-7">
@@ -140,7 +142,8 @@
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
     </section>
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"
+        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
