--- a/pharmacy.html
+++ b/pharmacy.html
@@ -43,20 +43,17 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Juguetes</a>
             </li>
+        </ul>
     </header>
-    <div class="title-pharma">
-        <h2>Nuestro catalogo de medicamtentos</h2>
+    <div class="container-title">
+        <h2>Nuestro catalogo de medicamentos</h2>
     </div>
     <div class="container-pharma row row-cols-1 row-cols-md-4" id="infoPharma">
         
     </div>
-
-
-    <section id="footer">
         <footer>
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
-    </section>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/js/conection.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
