cambios en el backgroud

--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
     <div class="header-page">
       <div class="header-flex">
         <div>
-          <img class="logo-primary" src="/assets/icons/logo.svg" alt="logo">
+          <img class="logo-primary" src="./assets/icons/logo.svg" alt="logo">
         </div>
         <div class="ubication-flex">
           <div>
-            <img class="logo-ubication" src="/assets/icons/location.svg" alt="">
+            <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
           </div>
           <div>
             <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
@@ -122,7 +122,6 @@
       }, false);
     })();
   </script>
-  <script src="/js/transitions.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
