--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
 <body>
     <header>
         <div class="header-page">
-            <div class="header-flex">
-                <div>
-                    <img class="logo-primary" src="/assets/icons/logo.svg" alt="logo">
-                </div>
-                <div class="ubication-flex">
-                    <div>
-                        <img class="logo-ubication" src="/assets/icons/location.svg" alt="">
-                    </div>
-                    <div>
-                        <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
-                    </div>
-                </div>
+          <div class="header-flex">
+            <div>
+              <img class="logo-primary" src="./assets/icons/logo.svg" alt="logo">
             </div>
+            <div class="ubication-flex">
+              <div>
+                <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
+              </div>
+              <div>
+                <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
+              </div>
+            </div>
+          </div>
         </div>
         <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Farmacia</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Juguetes</a>
-            </li>
-    </header>
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="pharmacy.html">Farmacia</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="toys.html">Juguetes</a>
+          </li>
+      </header>
     <div class="row">
         <div class="info-index col-sm-12 col-md-12 col-lg-12 col-xl-5">
             <div class="row somos-home">
@@ -68,7 +68,7 @@
                         La iniciativa FRANCO pet shop empezó como un
                         proyecto para perros viendo un mercado mal
                         informado y con poco interés a estas bellas criaturas.
-                        Actualmente nos vamos expandiendo a con nuestros
+                        Actualmente nos vamos expandiendo con nuestros
                         amigos mininos porque son nuestro día a día,
                         vivimos con 2 perros y 4 gatos adoptados,
                         sabemos lo que es tener un hijo peludo
@@ -88,25 +88,25 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-interval="4000">
-                        <img src="/assets/img/cariño.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/img/cariño.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="text-carousel">Unos mimos siempre estan bien.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-interval="4000">
-                        <img src="/assets/img/cuidarlos.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/img/cuidarlos.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="text-carousel">porque hay que cuidarlos,</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-interval="4000">
-                        <img src="/assets/img/aceptarlos.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/img/aceptarlos.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="text-carousel">aceptarlos,</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-interval="4000">
-                        <img src="/assets/img/amarlos.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/img/amarlos.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="text-carousel">Simplemente...Amarlos.</p>
                         </div>
@@ -123,8 +123,7 @@
             </div>
         </div>
     </div>
-    <div class="ubication-maps">
-        <hr>
+    <div class="row ubication-maps">
         <div class="text-ubication container">
             <p>Aquí te dejamos nuestra ubicación, esperamos tu visita pronto!</p>
         </div>
@@ -136,12 +135,9 @@
         </div>
     </div>
     </div>
-
-    <section id="footer">
         <footer>
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
-    </section>
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
