--- a/pharmacy.html
+++ b/pharmacy.html
@@ -14,37 +14,36 @@
     <title>Farmacia</title>
 </head>
 <body>
-    <header>
-        <div class="header-page">
-            <div class="header-flex">
-                <div>
-                    <img class="logo-primary" src="/assets/icons/logo.svg" alt="logo">
-                </div>
-                <div class="ubication-flex">
-                    <div>
-                        <img class="logo-ubication" src="/assets/icons/location.svg" alt="">
-                    </div>
-                    <div>
-                        <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
-                    </div>
-                </div>
-            </div>
+  <header>
+    <div class="header-page">
+      <div class="header-flex">
+        <div>
+          <img class="logo-primary" src="./assets/icons/logo.svg" alt="logo">
         </div>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contacto</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Farmacia</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Juguetes</a>
-            </li>
-        </ul>
-    </header>
+        <div class="ubication-flex">
+          <div>
+            <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
+          </div>
+          <div>
+            <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Inicio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="contact.html">Contacto</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="pharmacy.html">Farmacia</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="toys.html">Juguetes</a>
+      </li>
+  </header>
     <div class="container-title">
         <h2>Nuestro catalogo de medicamentos</h2>
     </div>
