--- a/pharmacy.html
+++ b/pharmacy.html
@@ -11,6 +11,7 @@
     <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="icon" href="./assets/icons/pharma.png">
     <title>Farmacia</title>
 </head>
 <body>
@@ -44,15 +45,22 @@
         <a class="nav-link" href="toys.html">Juguetes</a>
       </li>
   </header>
+  
     <div class="container-title">
         <h2>Nuestro catalogo de medicamentos</h2>
     </div>
-    <div class="container-pharma row row-cols-1 row-cols-md-4" id="infoPharma">
+    <div class="container-pharma row row-cols-1 row-cols-md-6" id="infoPharma">
         
     </div>
         <footer>
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
+    <script>
+      //Read More - Read Less
+
+ 
+
+    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/js/conection.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
