Solo faltan agregar extras y pulir algun detalle

--- a/pharmacy.html
+++ b/pharmacy.html
@@ -3,12 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,600;1,300&display=swap"
-        rel="stylesheet">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
         <link rel="icon" href="./assets/icons/pharma.png">
@@ -23,7 +19,7 @@
         </div>
         <div class="ubication-flex">
           <div>
-            <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
+            <img class="logo-ubication" src="./assets/img/location.svg" alt="">
           </div>
           <div>
             <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
@@ -38,29 +34,28 @@
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contacto</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="pharmacy.html">Farmacia</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tienda
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="toys.html">Juguetes</a>
+          <a class="dropdown-item" href="pharmacy.html">Farmacia</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="toys.html">Juguetes</a>
-      </li>
+      </ul>
   </header>
-  
+  <div class="container-toys">  
     <div class="container-title">
         <h2>Nuestro catalogo de medicamentos</h2>
     </div>
-    <div class="container-pharma row row-cols-1 row-cols-md-6" id="infoPharma">
+    <div class="row container-fluid justify-content-md-center" id="infoPharma">
         
     </div>
+  </div>
         <footer>
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
-    <script>
-      //Read More - Read Less
-
  
-
-    </script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/js/conection.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
