--- a/contact.html
+++ b/contact.html
@@ -5,12 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact</title>
-  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,600;1,300&display=swap"
-    rel="stylesheet">
-  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="icon" href="./assets/icons/contact.png">
@@ -25,7 +21,7 @@
         </div>
         <div class="ubication-flex">
           <div>
-            <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
+            <img class="logo-ubication" src="./assets/img/location.svg" alt="">
           </div>
           <div>
             <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
@@ -40,18 +36,21 @@
       <li class="nav-item">
         <a class="nav-link" href="contact.html">Contacto</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="pharmacy.html">Farmacia</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Tienda
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="toys.html">Juguetes</a>
+          <a class="dropdown-item" href="pharmacy.html">Farmacia</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="toys.html">Juguetes</a>
-      </li>
+      </ul>
   </header>
   <div class="container-form">
     <div class="container-title">
       <h2>Dejanos tu mensaje y te contactaremos a la brevedad</h2>
     </div>
-    <form class="needs-validation form-contacto" novalidate>
+    <form class="needs-validation form-contacto" action="gracias.html" novalidate>
       <div class="form-row">
         <div class="col-md-6 mb-3">
           <label for="validationCustom01">Nombre</label>
@@ -95,7 +94,7 @@
       </div>
       </div>
       <div class="button-enviar">  
-         <button class="btn btn-dark" onclick="red()" type="submit">Enviar Consulta</button>
+         <button class="btn btn-dark"  type="submit">Enviar Consulta</button>
       </div>
     </form>
   </div>
