--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio</title>
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200;0,600;1,300&display=swap"
-        rel="stylesheet">
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
         <link rel="icon" href="./assets/icons/home.png">
 </head>
 
@@ -25,7 +23,7 @@
             </div>
             <div class="ubication-flex">
               <div>
-                <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
+                <img class="logo-ubication" src="./assets/img/location.svg" alt="">
               </div>
               <div>
                 <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
@@ -40,18 +38,22 @@
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacto</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="pharmacy.html">Farmacia</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Tienda
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="toys.html">Juguetes</a>
+              <a class="dropdown-item" href="pharmacy.html">Farmacia</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="toys.html">Juguetes</a>
-          </li>
+          </ul>
       </header>
-    <div class="row">
+    <div class="row container-fluid contenido-home">
         <div class="info-index col-sm-12 col-md-12 col-lg-12 col-xl-5">
             <div class="row somos-home">
                 <div class="container-fluid">
-                    <h1>BIENVENIDOS a FRANCO pet shop</h1>
+                    <h1>BIENVENIDOS a <br>
+                        FRANCO pet shop</h1>
                     <p>
                         En nuestro sitio encontrarás el mejor cuidado
                         para tu mascota, tenemos la experiencia de más
@@ -124,7 +126,7 @@
             </div>
         </div>
     </div>
-    <div class="row ubication-maps">
+    <div class="row container-fluid ubication-maps">
         <div class="text-ubication container">
             <p>Aquí te dejamos nuestra ubicación, esperamos tu visita pronto!</p>
         </div>
@@ -139,8 +141,7 @@
         <footer>
             <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
         </footer>
-    <script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
         crossorigin="anonymous"></script>
