--- a/gracias.html
+++ b/gracias.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="icon" href="./assets/icons/thanks.png">
+  <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
 </head>
 </head>
 
@@ -18,11 +19,11 @@
     <div class="header-page">
       <div class="header-flex">
         <div>
-          <img class="logo-primary" src="./assets/icons/logo.svg" alt="logo">
+          <a href="index.html"><img class="logo-primary" src="./assets/icons/logo.svg" alt="logo-Franco-pet-shop"></a> 
         </div>
         <div class="ubication-flex">
           <div>
-            <img class="logo-ubication" src="./assets/icons/location.svg" alt="">
+            <img class="logo-ubication" src="./assets/img/location.svg" alt="">
           </div>
           <div>
             <p class="ubication-text">Río de Janeiro 300 - Caballito</p>
@@ -39,8 +40,23 @@
     </div>
 
     <footer>
-      <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
-    </footer>
+      <ul class="list-inline">
+          <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+                  <img src="/assets/icons/instagram.png" alt="">
+              </a></li>
+          <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
+                  <img src="/assets/icons/whatsapp.png" alt="">
+              </a></li>
+          <li class="list-inline-item"><a href="https:/m.me/francopetracoes" target="_blank">
+                  <img src="/assets/icons/messenger.png"">
+              </a></li>
+          <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
+                  <img src="/assets/icons/correo.png" alt="">
+              </a></li>
+      </ul>
+      <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+  </footer>
+  
     <script src="/js/events.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
