--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="header-page">
           <div class="header-flex">
             <div>
-              <img class="logo-primary" src="./assets/icons/logo.svg" alt="logo">
+                <a href="index.html"><img class="logo-primary" src="./assets/icons/logo.svg" alt="logo-Franco-pet-shop"></a> 
             </div>
             <div class="ubication-flex">
               <div>
@@ -77,6 +77,16 @@
                         sabemos lo que es tener un hijo peludo
                         y por eso compartimos con nuestros clientes
                         los mejores productos para su mascota.
+                    </p>
+                </div>
+                <div class="container-fluid">
+                    <h2>
+                        Todo lo que tu mascota necesita
+                    </h2>
+                    <p>
+                        Vendemos alimento balanceado de las mejores marcas del país y al mejor precio.
+                         También vendemos una amplia variedad de
+                        accesorios y hacemos envíos a todo el país!
                     </p>
                 </div>
             </div>
@@ -138,9 +148,24 @@
         </div>
     </div>
     </div>
-        <footer>
-            <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
-        </footer>
+
+    <footer>
+        <ul class="list-inline">
+            <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+                    <img src="/assets/icons/instagram.png" alt="">
+                </a></li>
+            <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
+                    <img src="/assets/icons/whatsapp.png" alt="">
+                </a></li>
+            <li class="list-inline-item"><a href="https:/m.me/francopetracoes" target="_blank">
+                    <img src="/assets/icons/messenger.png"">
+                </a></li>
+            <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
+                    <img src="/assets/icons/correo.png" alt="">
+                </a></li>
+        </ul>
+        <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
