--- a/pharmacy.html
+++ b/pharmacy.html
@@ -15,7 +15,7 @@
     <div class="header-page">
       <div class="header-flex">
         <div>
-          <img class="logo-primary" src="./assets/icons/logo.svg" alt="logo">
+          <a href="index.html"><img class="logo-primary" src="./assets/icons/logo.svg" alt="logo-Franco-pet-shop"></a> 
         </div>
         <div class="ubication-flex">
           <div>
@@ -52,9 +52,24 @@
         
     </div>
   </div>
-        <footer>
-            <p>©2020 Todos los derechos reservados - FRANCO SHOP PET </p>
-        </footer>
+    
+  <footer>
+    <ul class="list-inline">
+        <li class="list-inline-item"><a href="https://www.instagram.com/lionpetshopfranco/" target="_blank">
+                <img src="/assets/icons/instagram.png" alt="">
+            </a></li>
+        <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
+                <img src="/assets/icons/whatsapp.png" alt="">
+            </a></li>
+        <li class="list-inline-item"><a href="https:/m.me/francopetracoes" target="_blank">
+                <img src="/assets/icons/messenger.png"">
+            </a></li>
+        <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
+                <img src="/assets/icons/correo.png" alt="">
+            </a></li>
+    </ul>
+    <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
+</footer>
  
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="/js/conection.js"></script>
