--- a/gracias.html
+++ b/gracias.html
@@ -47,7 +47,7 @@
           <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
                   <img src="/assets/icons/whatsapp.png" alt="">
               </a></li>
-          <li class="list-inline-item"><a href="https:/m.me/francopetracoes" target="_blank">
+              <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger" target="_blank">
                   <img src="/assets/icons/messenger.png"">
               </a></li>
           <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
@@ -56,7 +56,7 @@
       </ul>
       <p>©2020 Todos los derechos reservados - FRANCO pet shop </p>
   </footer>
-  
+
     <script src="/js/events.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
