--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-interval="4000">
-                        <img src="./assets/img/cariño.jpg" class="d-block w-100" alt="...">
+                        <img src="./assets/img/cariño.jpg" class="d-block w-100" alt="dog">
                         <div class="carousel-caption d-none d-md-block">
                             <p class="text-carousel">Unos mimos siempre estan bien.</p>
                         </div>
@@ -157,7 +157,7 @@
             <li class="list-inline-item"><a href="https://api.whatsapp.com/send?phone=5493517700279" target="_blank">
                     <img src="/assets/icons/whatsapp.png" alt="">
                 </a></li>
-            <li class="list-inline-item"><a href="https:/m.me/francopetracoes" target="_blank">
+            <li class="list-inline-item"><a href="https://m.me/rusbent.matta" class="fab fa-facebook-messenger" target="_blank">
                     <img src="/assets/icons/messenger.png"">
                 </a></li>
             <li class="list-inline-item"><a href="mailto:francopet193@gmail.com">
